data/derived/sp14/progs/unify/prog0168.ml.out
Characters 72-123:
  | h::t -> ( (h*i)/10 + mulByDigit i t ) :: (h*i mod 10) :: [];;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
